게시물 작성자 오류 수정

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,3 +15,18 @@ sille_bille:
   name: Dinesh Prasanth Moluguwan Krishnamoorthy
   twitter: dinesh_MKD
   url: https://github.com/SilleBille/
+
+ipwn:
+  name: HSAPCE(기술협력팀)
+snwo:
+  name: HSAPCE(기술협력팀)
+soon_haari:
+  name: HSAPCE(기술협력팀)
+Arkea:
+  name: Arkea
+임예준(Burnnnnny):
+  name: 임예준(Burnnnnny)
+김영민(OSORI):
+  name: 김영민(OSORI)
+김수진(Sujini):
+  name: 김수진(Sujini)
