--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -22,11 +22,29 @@ snwo:
   name: HSAPCE(기술협력팀)
 soon_haari:
   name: HSAPCE(기술협력팀)
-Arkea:
-  name: Arkea
+realsung:
+  name: HSAPCE(기술협력팀)
+이인강(Arkea):
+  name: 이인강(Arkea)
 임예준(Burnnnnny):
   name: 임예준(Burnnnnny)
 김영민(OSORI):
   name: 김영민(OSORI)
 김수진(Sujini):
   name: 김수진(Sujini)
+조수호(shielder):
+  name: 조수호(shielder)
+이재영(Finder):
+  name: 이재영(Finder)
+강지원(jiw0n):
+  name: 강지원(jiw0n)
+오성훈(5un9hun):
+  name: 오성훈(5un9hun)
+조해성(GDOCCHI):
+  name: 조해성(GDOCCHI)
+김도헌(S7nT3E):
+  name: 김도헌(S7nT3E)
+hacktheon2024:
+  name: 김종민(slyfizz), 강상수(gss1), 장서현(D1N0), 박기태(kitae), 박성준(realsung), 이서준(zer0tim3r), 안건희(ipwn), 이주창(c2w2m2)
+hacktheon2025:
+  name: 박기태(kitaep), 박성준(realsung), 박창완(diff), 안건희(ipwn), 이서준(zer0tim3r)
