add googl analytics

--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: G-8JEE6M4FRD # fill in your Google Analytics ID
+    id: G-S4RYC5FHHY # fill in your Google Analytics ID
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
